--- a/templates/authentication/reset_confirm.html
+++ b/templates/authentication/reset_confirm.html
@@ -1,7 +1,7 @@
 {% extends "reset_email.html" %}
 
 {% block title %}
-  
+    Project_BOCS | Forgot Password
 {% endblock %}
 
 {% block content %}
