--- a/static/assets/css/colndistrib_style.css
+++ b/static/assets/css/colndistrib_style.css
@@ -1,54 +1,4 @@
-/* RESET */
-*, *::before, *::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
-}
-
-/* ANIMATION */
-
-/* CUSTOMIZATION */
-:root {
-/* Color */
---clr-darkestI: #000;
---clr-darkest: #000249;
---clr-darker: #484a94;
---clr-dark: #004aad;
---clr-lightdarker: #565656;
---clr-lightdark: #a6a6a6;
---clr-lighter: #effbff;
---clr-light: #fff;
-
-/* Font Family */
---ff-primary: 'Avenir', 'Open Sans', sans-serif;
---ff-secondary: 'Raleway', monospace;
-
-/* Font Weight */
---fw-reg: 300;
---fw-med: 600;
---fw-bold: 900;
-
-/* Font Size */
---fs-h1: 3rem;
---fs-h2: 2.25rem;
---fs-h3: 1.25rem;
---fs-body: 1rem;
-
-/* Box Shadow */
---bs: .25em .25em .75em rgba(0,0,0,.25),
-        .125em .125em .25em rgba(0,0,0,.15);
-}
-
-@media (max-width: 800px) {
-:root {
-    /* Font Size */
-    --fs-h1: 2rem;
-    --fs-h2: 1.5rem;
-    --fs-h3: 1rem;
-    --fs-body: .8rem;
-}
-}
+@import url('main.css');
 
 /* GENERAL */
 body{
@@ -62,11 +12,14 @@ body{
 }
 
 /* HEADER */
-.header{
+.header{    
+    position: sticky;
+    top: 0;
     width: 100%;
     height: fit-content;
     background-color: var(--clr-light);
-    z-index: 2;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    z-index: 999;
 }
 
 .nav{
@@ -139,6 +92,7 @@ nav ul li a{
 .title {
     font-size: 20px;
     text-align: center;
+    text-transform: uppercase;
     position: absolute;
     left: 50%;
     transform: translateX(-50%); 
@@ -334,86 +288,41 @@ hr{
     color: var(--clr-light);
 }
 
-.list{
+.main .container{
+    height: max-content;
+}
+.main .container .wrapper{
     display: flex;
+    justify-content: center;
     align-items: center;
-    min-height: 100vh;
-    flex-direction: column;
-}
-
-.form{
-    color: var(--clr-darkest);
-    background-color: var(--clr-light);
-    margin-top: 1rem;
-    padding: 15px 25px;
-    width: 100%;
-    max-width: 440px;
-    border-radius: 5px;
-    box-shadow: 0px 0px 10px 0px #666;
-    z-index: 1;
-}
-
-.input-group {
-    position: relative;
-    margin: 20px 0;
-}
-
-.input-group label {
-    position: absolute;
-    top: 50%;
-    left: 15px;
-    transform: translateY(-50%);
-    font-size: 16px;
-    color: var(--clr-darkest);
-    padding: 0 5px;
-    pointer-events: none;
-    transition: .5s;
-}
-
-.input-group input {
-    width: 360px;
-    height: 60px;
-    font-size: 16px;
-    color: var(--clr-darkest);
-    padding: 0 15px;
-    background: transparent;
-    border: 1.6px solid var(--clr-darkest);
-    outline: none;
-    border-radius: 5px;
-}
-
-
-.input-group input:focus + label{
-    top: -1px;
-    color: #000249;
-    background-color: white;
-}
-
-.input-group input:focus~label,
-.input-group input:valid~label {
-    top: 0;
-    font-size: 14px;
-    color: var(--clr-darkest);
-    background: var(--clr-light);
-}
-
-input[type=submit],
-input[type=button] {
-    width: 100%;
-    height: 1rem + 1dvw;
-    background-color: #4CAF50;
-    color: var(--clr-light);
-    font-weight: var(--fw-med);
     text-align: center;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: all 1s;
+    gap: 2rem;
 }
 
-input[type=submit]:hover,
-input[type=button]:hover {
-    background-color: #3b813d;
+.wrapper .link{
+    width: 14rem;
+    height: 7rem;
+    padding: 1rem;
+    background-color: var(--clr-light);
+    color: var(--clr-darkest);
+    font-size: larger;
+    font-weight: var(--fw-bold);
+    text-transform: uppercase;
+    justify-content: center;
+    border-radius: 1rem;
+    border: 3px solid var(--clr-darkest);
+    outline: 4px solid var(--clr-light);
+    box-shadow: var(--bs1);
+    transition: all .5s;
+}
+
+.wrapper .link:hover{
+    width: 16rem;
+    height:9rem;
+    padding: 1rem;
+    font-size: x-large;
+    color: var(--clr-light);
+    background-color: var(--clr-acsent);
+    border: 3px solid var(--clr-light);
+    outline: 4px solid var(--clr-acsent);
 }
