--- a/static/assets/css/dashboard_style.css
+++ b/static/assets/css/dashboard_style.css
@@ -1,54 +1,4 @@
-/* RESET */
-*, *::before, *::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  scroll-behavior: smooth;
-}
-
-/* ANIMATION */
-
-/* CUSTOMIZATION */
-:root {
-  /* Color */
-  --clr-darkestI: #000;
-  --clr-darkest: #000249;
-  --clr-darker: #484a94;
-  --clr-dark: #004aad;
-  --clr-lightdarker: #565656;
-  --clr-lightdark: #a6a6a6;
-  --clr-lighter: #effbff;
-  --clr-light: #fff;
-
-  /* Font Family */
-  --ff-primary: 'Avenir', 'Open Sans', sans-serif;
-  --ff-secondary: 'Raleway', monospace;
-
-  /* Font Weight */
-  --fw-reg: 300;
-  --fw-med: 600;
-  --fw-bold: 900;
-
-  /* Font Size */
-  --fs-h1: 3rem;
-  --fs-h2: 2.25rem;
-  --fs-h3: 1.25rem;
-  --fs-body: 1rem;
-
-  /* Box Shadow */
-  --bs: .25em .25em .75em rgba(0,0,0,.25),
-        .125em .125em .25em rgba(0,0,0,.15);
-}
-
-@media (max-width: 800px) {
-  :root {
-      /* Font Size */
-      --fs-h1: 2rem;
-      --fs-h2: 1.5rem;
-      --fs-h3: 1rem;
-      --fs-body: .8rem;
-  }
-}
+@import url('main.css');
 
 /* GENERAL */
 body{
@@ -62,10 +12,14 @@ body{
 }
 
 /* HEADER */
-.header{
+.header{    
+  position: sticky;
+  top: 0;
   width: 100%;
   height: fit-content;
   background-color: var(--clr-light);
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  z-index: 999;
 }
 
 .nav{
@@ -86,7 +40,9 @@ body{
   display: flex;
   align-items: center;
   margin: 0 auto;
+  width: 2.5vw;
   height: 2.5vw;
+  object-fit: contain;
   border-radius: 50%;
   border: 2.5px solid var(--clr-darkest);
   cursor: pointer;
@@ -235,7 +191,9 @@ hr{
 }
 
 .user_info .img_user--{
+  width: 3.5vw;
   height: 3.5vw;
+  object-fit: cover;
   margin: 1rem 1rem .2rem;
   border-radius: 50%;
   border: .3rem solid var(--clr-darkest);
