--- a/static/assets/css/inventory_style.css
+++ b/static/assets/css/inventory_style.css
@@ -1,54 +1,4 @@
-/* RESET */
-*, *::before, *::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
-}
-
-/* ANIMATION */
-
-/* CUSTOMIZATION */
-:root {
-/* Color */
---clr-darkestI: #000;
---clr-darkest: #000249;
---clr-darker: #484a94;
---clr-dark: #004aad;
---clr-lightdarker: #565656;
---clr-lightdark: #a6a6a6;
---clr-lighter: #effbff;
---clr-light: #fff;
-
-/* Font Family */
---ff-primary: 'Avenir', 'Open Sans', sans-serif;
---ff-secondary: 'Raleway', monospace;
-
-/* Font Weight */
---fw-reg: 300;
---fw-med: 600;
---fw-bold: 900;
-
-/* Font Size */
---fs-h1: 3rem;
---fs-h2: 2.25rem;
---fs-h3: 1.25rem;
---fs-body: 1rem;
-
-/* Box Shadow */
---bs: .25em .25em .75em rgba(0,0,0,.25),
-        .125em .125em .25em rgba(0,0,0,.15);
-}
-
-@media (max-width: 800px) {
-:root {
-    /* Font Size */
-    --fs-h1: 2rem;
-    --fs-h2: 1.5rem;
-    --fs-h3: 1rem;
-    --fs-body: .8rem;
-}
-}
+@import url('main.css');
 
 /* GENERAL */
 body{
@@ -62,10 +12,14 @@ body{
 }
 
 /* HEADER */
-.header{
+.header{    
+    position: sticky;
+    top: 0;
     width: 100%;
     height: fit-content;
     background-color: var(--clr-light);
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    z-index: 999;
 }
 
 .nav{
@@ -138,6 +92,7 @@ nav ul li a{
 .title {
     font-size: 20px;
     text-align: center;
+    text-transform: uppercase;
     position: absolute;
     left: 50%;
     transform: translateX(-50%); 
@@ -345,16 +300,29 @@ hr{
 }
 
 .wrapper .link{
-    width: 15rem;
-    height: 8rem;
-    /* max-width: 200px; */
+    width: 14rem;
+    height: 7rem;
     padding: 1rem;
     background-color: var(--clr-light);
     color: var(--clr-darkest);
     font-size: larger;
     font-weight: var(--fw-bold);
+    text-transform: uppercase;
     justify-content: center;
     border-radius: 1rem;
-    border: 2px ridge var(--clr-darkest);
+    border: 3px solid var(--clr-darkest);
+    outline: 4px solid var(--clr-light);
+    box-shadow: var(--bs1);
+    transition: all .5s;
+}
 
+.wrapper .link:hover{
+    width: 16rem;
+    height:9rem;
+    padding: 1rem;
+    font-size: x-large;
+    color: var(--clr-light);
+    background-color: var(--clr-acsent);
+    border: 3px solid var(--clr-light);
+    outline: 4px solid var(--clr-acsent);
 }
