--- a/static/assets/css/login_style.css
+++ b/static/assets/css/login_style.css
@@ -1,52 +1,4 @@
-/* RESET */
-*, *::before, *::after {
-    box-sizing: border-box;
-    scroll-behavior: smooth;
-}
-
-/* ANIMATION */
-
-/* CUSTOMIZATION */
-:root {
-    /* Color */
-    --clr-darkestI: #000;
-    --clr-darkest: #000249;
-    --clr-darker: #484a94;
-    --clr-dark: #004aad;
-    --clr-lightdarker: #737373;
-    --clr-lightdark: #a6a6a6;
-    --clr-lighter: #effbff;
-    --clr-light: #fff;
-
-    /* Font Family */
-    --ff-primary: 'Avenir', sans-serif;
-    --ff-secondary: 'Raleway', monospace;
-
-    /* Font Weight */
-    --fw-reg: 300;
-    --fw-med: 600;
-    --fw-bold: 900;
-
-    /* Font Size */
-    --fs-h1: 2rem;
-    --fs-h2: 1.3rem;
-    --fs-h3: 1rem;
-    --fs-body: .8rem;
-
-    /* Box Shadow */
-    --bs: .25em .25em .75em rgba(0,0,0,.25),
-          .125em .125em .25em rgba(0,0,0,.15);
-}
-
-@media (min-width: 1000px) {
-    :root {
-        /* Font Size */
-        --fs-h1: 3rem;
-        --fs-h2: 2.25rem;
-        --fs-h3: 1.25rem;
-        --fs-body: 1.5rem;
-    }
-}
+@import url('main.css');
 
 /* GENERAL */
 body {
