--- a/static/assets/css/reservation_style.css
+++ b/static/assets/css/reservation_style.css
@@ -1,86 +1,42 @@
-/* RESET */
-*, *::before, *::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
-}
-
-/* ANIMATION */
-
-/* CUSTOMIZATION */
-:root {
-    /* Color */
-    --clr-darkestI: #000;
-    --clr-darkest: #000249;
-    --clr-darker: #484a94;
-    --clr-dark: #004aad;
-    --clr-lightdarker: #565656;
-    --clr-lightdark: #a6a6a6;
-    --clr-lighter: #effbff;
-    --clr-light: #fff;
-
-    /* Font Family */
-    --ff-primary: "Avenir", "Open Sans", sans-serif;
-    --ff-secondary: "Raleway", monospace;
-
-    /* Font Weight */
-    --fw-reg: 300;
-    --fw-med: 600;
-    --fw-bold: 900;
-
-    /* Font Size */
-    --fs-h1: 3rem;
-    --fs-h2: 2.25rem;
-    --fs-h3: 1.25rem;
-    --fs-body: 1rem;
-
-    /* Box Shadow */
-    --bs: 0.25em 0.25em 0.75em rgba(0, 0, 0, 0.25),
-        0.125em 0.125em 0.25em rgba(0, 0, 0, 0.15);
-}
-
-@media (max-width: 800px) {
-    :root {
-        /* Font Size */
-        --fs-h1: 2rem;
-        --fs-h2: 1.5rem;
-        --fs-h3: 1rem;
-        --fs-body: 0.8rem;
-    }
-}
+@import url('main.css');
 
 /* GENERAL */
-body {
+body{
+    display: flex;
+    flex-direction: column;
     font-family: var(--ff-primary);
     width: 100vw;
     height: 100vh;
     margin: 0;
-    background-color: var(--clr-darkest);
+    overflow: hidden;
 }
 
 /* HEADER */
-.header {
+.header{    
+    position: sticky;
+    top: 0;
     width: 100%;
     height: fit-content;
     background-color: var(--clr-light);
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    z-index: 999;
 }
 
-.nav {
+.nav{
     height: 100%;
-    padding: 0.5rem 3.5rem;
+    padding: .5rem 3.5rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
     position: relative;
 }
 
-.img_bocs {
+.img_bocs{
     height: 5vw;
     padding: 5px 2px;
 }
 
-.img_user {
+.img_user{
     display: flex;
     align-items: center;
     margin: 0 auto;
@@ -91,12 +47,16 @@ body {
     margin: 30px;
 }
 
-nav ul {
+.img_user:hover{
+    height: 2.5vw;
+}
+
+nav ul{
     width: 100%;
     text-align: center;
 }
 
-nav ul li {
+nav ul li{
     max-width: 100px;
     display: inline-block;
     margin: 1rem 4rem;
@@ -107,13 +67,13 @@ nav ul li {
     line-height: normal;
 }
 
-.active {
+.active{
     color: var(--clr-darkestI);
-    font-weight: 500;
+    font-weight: 500; 
 }
 
 .active::after {
-    content: "";
+    content: '';
     position: absolute;
     bottom: -5px;
     left: 0;
@@ -124,18 +84,27 @@ nav ul li {
     transform: scaleX(1);
 }
 
-nav ul li a {
+nav ul li a{
     color: var(--clr-lightdark);
     text-decoration: none;
 }
 
-nav ul li a:hover {
+.title {
+    font-size: 20px;
+    text-align: center;
+    text-transform: uppercase;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%); 
+}
+
+nav ul li a:hover{
     color: var(--clr-darkestI);
     font-weight: 500;
 }
 
-nav ul li a::after {
-    content: "";
+nav ul li a::after{
+    content: '';
     position: absolute;
     bottom: -5px;
     left: 0;
@@ -147,40 +116,41 @@ nav ul li a::after {
     transition: all 0.3s ease-in-out;
 }
 
-nav ul li a:hover::after {
+nav ul li a:hover::after{
     visibility: visible;
     transform: scaleX(1);
 }
 
-img.img_nch {
+.img_nch {
     position: absolute;
     top: 12rem;
     z-index: 0;
-    opacity: 0.5;
+    opacity: .5;
     filter: blur(5px);
 }
 
-section {
+section{
     z-index: 1;
 }
 
-.hide {
+.hide{
     display: none;
 }
 
 /* TOGGLED SECTION*/
-.sub_wrap {
+.sub_wrap{
     width: 18rem;
     height: fit-content;
     margin-top: 10px;
     position: absolute;
     top: 6.6rem;
     right: 1.5rem;
-    transition: all 0.5s;
+    transition: all .5s;
     color: var(--clr-darkest);
+    z-index: 3;
 }
 
-.sub {
+.sub{
     width: 100%;
     padding: 15px;
     margin: 10px;
@@ -190,19 +160,21 @@ section {
     border-radius: 1.5rem;
 }
 
-.sub .close {
+.sub .close{
     position: absolute;
-    top: 0.5rem;
-    right: 0.5rem;
+    top: .5rem;
+    right: .5rem;
     width: 1rem;
     height: 1rem;
     font-size: 2.5rem;
     border: none;
     outline: none;
     background-color: transparent;
+
 }
 
-.user_info {
+
+.user_info{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -211,37 +183,37 @@ section {
     list-style: none;
 }
 
-.user_info h2 {
+.user_info h2{
     font-weight: 700;
     font-size: larger;
 }
 
-hr {
+hr{
     height: 3px;
-    margin-bottom: 0.5rem;
+    margin-bottom: .5rem;
     background-color: var(--clr-darkest);
     border: none;
     border-radius: 1rem;
     font-weight: 100;
 }
 
-.user_info p {
+.user_info p{
     font-size: small;
-    margin: 0.1rem;
+    margin: .1rem;
 }
 
-.user_info .img_user-- {
+.user_info .img_user--{
     height: 3.5vw;
-    margin: 1rem 1rem 0.2rem;
+    margin: 1rem 1rem .2rem;
     border-radius: 50%;
-    border: 0.3rem solid var(--clr-darkest);
+    border: .3rem solid var(--clr-darkest);
 }
 
-.user_info a {
+.user_info a{
     text-decoration: none;
 }
 
-.user_info a button {
+.user_info a button{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -252,30 +224,30 @@ hr {
     color: var(--clr-light);
     font-size: x-small;
     font-weight: 600;
-    letter-spacing: 0.1rem;
+    letter-spacing: .1rem;
     text-transform: uppercase;
     outline: none;
     cursor: pointer;
 }
 
-.icon {
+.icon{
     height: 1rem;
-    margin-right: 0.3rem;
+    margin-right: .3rem;
 }
 
-.user_info a .update_btn {
-    margin: 1rem 0.5rem 0.5rem;
+.user_info a .update_btn{
+    margin: 1rem .5rem .5rem; 
     background-color: var(--clr-darkest);
 }
 
-.user_info a .logout_btn {
-    margin: 0.5rem 0.5rem 1rem;
+.user_info a .logout_btn{
+    margin: .5rem .5rem 1rem; 
     background-color: var(--clr-lightdark);
     width: 13rem;
 }
 
 /* MINI NAV */
-.mini-nav {
+.mini-nav{
     width: 100%;
     height: fit-content;
     background-color: var(--clr-darkest);
@@ -284,115 +256,74 @@ hr {
     z-index: 2;
 }
 
-.mini-nav .nav2 {
+.mini-nav .nav2{
     height: 100%;
-    padding: 0.5rem 1rem;
+    padding: .5rem 1rem;
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     justify-content: flex-end;
     flex-direction: row;
     gap: 1rem;
 }
 
-.mini-nav .nav2 .icon-link {
+.mini-nav .nav2 .icon-link{
     text-decoration: none;
 }
 
-.nav2 .icon-link img {
+.nav2 .icon-link img{
     height: 2.2rem;
 }
 
-.nav2 .img_backIcon {
+.nav2 .img_backIcon{
     margin-right: auto;
 }
 
-.form1 {
-    color: #000;
-    background-color: #fff;
-    padding: 20px 20px;
-    width: 100%;
-    max-width: 350px;
-    border-radius: 5px;
+/* MAIN */
+.main{
+    display: flex;
+    flex-grow: 1;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--clr-darkest);
+    color: var(--clr-light);
     z-index: 1;
 }
 
-.input-group {
-    position: relative;
+.main .container{
+    height: max-content;
 }
-
-.input {
-    padding: 10px;
-    width: 100%;
-    outline: none;
-    border: 2px solid #000249;
-}
-
-.placeholder {
-    position: absolute;
-    top: 20px;
-    left: 8px;
-    font-size: 14px;
-    padding: 0 5px;
-    color: #666;
-    transition: 0.3s;
-    pointer-events: none;
-}
-
-input[type="text"]:focus+.placeholder,
-input[type="email"]:focus+.placeholder,
-input[type="password"]:focus+.placeholder {
-    top: -1px;
-    color: #000249;
-    background-color: #fff;
-}
-
-input[type="text"],
-input[type="email"],
-input[type="password"] {
-    width: 100%;
-    max-width: 300px;
-    height: 1rem + 1dvw;
-    padding: 12px 20px;
-    margin: 8px 0;
-    font-weight: var(--fw-med);
-    outline: none;
-    border: 1px solid var(--clr-darkest);
-    border-radius: 4px;
-    transition: all 1s;
-}
-
-input[type="submit"],
-input[type="button"] {
-    width: 50%;
-    height: 1rem + 1dvw;
-    background-color: #4caf50;
-    color: var(--clr-light);
-    font-weight: var(--fw-med);
-    text-align: center;
-    padding: 14px 20px;
-    margin: 8px 65px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: all 1s;
-}
-
-input[type="submit"]:hover,
-input[type="button"]:hover {
-    background-color: #3b813d;
-}
-
-.title {
-    padding: 5px;
-    margin: 5px 39%;
-    text-align: center;
-    color: var(--clr-light);
-}
-
-/* MAIN */
-.main {
+.main .container .wrapper{
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
+    gap: 2rem;
+}
+
+.wrapper .link{
+    width: 14rem;
+    height: 7rem;
+    padding: 1rem;
+    background-color: var(--clr-light);
+    color: var(--clr-darkest);
+    font-size: larger;
+    font-weight: var(--fw-bold);
+    text-transform: uppercase;
+    justify-content: center;
+    border-radius: 1rem;
+    border: 3px solid var(--clr-darkest);
+    outline: 4px solid var(--clr-light);
+    box-shadow: var(--bs1);
+    transition: all .5s;
+}
+
+.wrapper .link:hover{
+    width: 16rem;
+    height:9rem;
+    padding: 1rem;
+    font-size: x-large;
     color: var(--clr-light);
+    background-color: var(--clr-acsent);
+    border: 3px solid var(--clr-light);
+    outline: 4px solid var(--clr-acsent);
 }
