--- a/static/assets/css/reservation_style2.css
+++ b/static/assets/css/reservation_style2.css
@@ -1,54 +1,4 @@
-/* RESET */
-*, *::before, *::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
-}
-
-/* ANIMATION */
-
-/* CUSTOMIZATION */
-:root {
-/* Color */
---clr-darkestI: #000;
---clr-darkest: #000249;
---clr-darker: #484a94;
---clr-dark: #004aad;
---clr-lightdarker: #565656;
---clr-lightdark: #a6a6a6;
---clr-lighter: #effbff;
---clr-light: #fff;
-
-/* Font Family */
---ff-primary: 'Avenir', 'Open Sans', sans-serif;
---ff-secondary: 'Raleway', monospace;
-
-/* Font Weight */
---fw-reg: 300;
---fw-med: 600;
---fw-bold: 900;
-
-/* Font Size */
---fs-h1: 3rem;
---fs-h2: 2.25rem;
---fs-h3: 1.25rem;
---fs-body: 1rem;
-
-/* Box Shadow */
---bs: .25em .25em .75em rgba(0,0,0,.25),
-        .125em .125em .25em rgba(0,0,0,.15);
-}
-
-@media (max-width: 800px) {
-:root {
-    /* Font Size */
-    --fs-h1: 2rem;
-    --fs-h2: 1.5rem;
-    --fs-h3: 1rem;
-    --fs-body: .8rem;
-}
-}
+@import url('main.css');
 
 /* GENERAL */
 body{
@@ -58,14 +8,18 @@ body{
     width: 100vw;
     height: 100vh;
     margin: 0;
+    overflow: hidden;
 }
 
 /* HEADER */
-.header{
+.header{    
+    position: sticky;
+    top: 0;
     width: 100%;
     height: fit-content;
     background-color: var(--clr-light);
-    z-index: 2;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    z-index: 999;
 }
 
 .nav{
@@ -138,6 +92,7 @@ nav ul li a{
 .title {
     font-size: 20px;
     text-align: center;
+    text-transform: uppercase;
     position: absolute;
     left: 50%;
     transform: translateX(-50%); 
@@ -168,12 +123,11 @@ nav ul li a:hover::after{
 
 .img_nch {
     position: absolute;
-    top: 12rem; 
+    top: 12rem;
     z-index: 0;
     opacity: .5;
     filter: blur(5px);
 }
-
 
 section{
     z-index: 1;
@@ -324,6 +278,82 @@ hr{
     margin-right: auto;
 }
 
+.form1 {
+    color: #000;
+    background-color: #fff;
+    padding: 20px 20px;
+    width: 100%;
+    max-width: 350px;
+    border-radius: 5px;
+    z-index: 1;
+}
+
+.input-group {
+    position: relative;
+}
+
+.input {
+    padding: 10px;
+    width: 100%;
+    outline: none;
+    border: 2px solid #000249;
+}
+
+.placeholder {
+    position: absolute;
+    top: 20px;
+    left: 8px;
+    font-size: 14px;
+    padding: 0 5px;
+    color: #666;
+    transition: 0.3s;
+    pointer-events: none;
+}
+
+input[type="text"]:focus+.placeholder,
+input[type="email"]:focus+.placeholder,
+input[type="password"]:focus+.placeholder {
+    top: -1px;
+    color: #000249;
+    background-color: #fff;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="password"] {
+    width: 100%;
+    max-width: 300px;
+    height: 1rem + 1dvw;
+    padding: 12px 20px;
+    margin: 8px 0;
+    font-weight: var(--fw-med);
+    outline: none;
+    border: 1px solid var(--clr-darkest);
+    border-radius: 4px;
+    transition: all 1s;
+}
+
+input[type="submit"],
+input[type="button"] {
+    width: 50%;
+    height: 1rem + 1dvw;
+    background-color: #4caf50;
+    color: var(--clr-light);
+    font-weight: var(--fw-med);
+    text-align: center;
+    padding: 14px 20px;
+    margin: 8px 65px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: all 1s;
+}
+
+input[type="submit"]:hover,
+input[type="button"]:hover {
+    background-color: #3b813d;
+}
+
 /* MAIN */
 .main{
     display: flex;
@@ -332,88 +362,17 @@ hr{
     align-items: center;
     background-color: var(--clr-darkest);
     color: var(--clr-light);
-}
-
-.list{
-    display: flex;
-    align-items: center;
-    min-height: 100vh;
-    flex-direction: column;
-}
-
-.form{
-    color: var(--clr-darkest);
-    background-color: var(--clr-light);
-    margin-top: 1rem;
-    padding: 15px 25px;
-    width: 100%;
-    max-width: 440px;
-    border-radius: 5px;
-    box-shadow: 0px 0px 10px 0px #666;
     z-index: 1;
 }
 
-.input-group {
-    position: relative;
-    margin: 20px 0;
+.main .container{
+    height: max-content;
 }
 
-.input-group label {
-    position: absolute;
-    top: 50%;
-    left: 15px;
-    transform: translateY(-50%);
-    font-size: 16px;
-    color: var(--clr-darkest);
-    padding: 0 5px;
-    pointer-events: none;
-    transition: .5s;
-}
-
-.input-group input {
-    width: 360px;
-    height: 60px;
-    font-size: 16px;
-    color: var(--clr-darkest);
-    padding: 0 15px;
-    background: transparent;
-    border: 1.6px solid var(--clr-darkest);
-    outline: none;
-    border-radius: 5px;
-}
-
-
-.input-group input:focus + label{
-    top: -1px;
-    color: #000249;
-    background-color: white;
-}
-
-.input-group input:focus~label,
-.input-group input:valid~label {
-    top: 0;
-    font-size: 14px;
-    color: var(--clr-darkest);
-    background: var(--clr-light);
-}
-
-input[type=submit],
-input[type=button] {
-    width: 100%;
-    height: 1rem + 1dvw;
-    background-color: #4CAF50;
-    color: var(--clr-light);
-    font-weight: var(--fw-med);
+.main .container .wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: all 1s;
-}
-
-input[type=submit]:hover,
-input[type=button]:hover {
-    background-color: #3b813d;
+    gap: 2rem;
 }
