--- a/templates/authentication/reset_email.html
+++ b/templates/authentication/reset_email.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="keywords" content=""> 
-    <title>{% block title %} {{ title }} {% endblock %}</title>
+    <title>{% block title %} Project_BOCS | {{ title }} {% endblock %}</title>
     
     <!-- REFERENCES -->
     <link rel="stylesheet" href="{% static 'assets/css/reset_style.css' %}">
