--- a/templates/authentication/signup.html
+++ b/templates/authentication/signup.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="keywords" content=""> 
-    <title>{{ title }}</title>
+    <title>Project_BOCS | {{ title }}</title>
     
     <!-- REFERENCES -->
     <link rel="stylesheet" href="{% static 'assets/css/signup_style.css' %}">
