--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="keywords" content=""> 
-    <title>{% block title %}{% endblock %}</title>
+    <title>Project_BOCS | {{ title }}</title>
 
     <!-- REFERENCES -->
     <link rel="stylesheet" href="{% static 'assets/css/dashboard_style.css' %}">
@@ -21,47 +21,47 @@
 <body>
     <header class="header">
         <nav class="nav">
-            <a href= "/dashboard">
+            <a href= "{% url 'dashboard' %}">
                 <img src="{% static 'assets/img/BOCS Logo Banner.png' %}" class="img_bocs">
             </a>
             <ul class="links">
                 <li class="link">
-                    <a href="{% url "inventory" %}" class="link-item">Inventory</a>
+                    <a href="{% url 'inventory' %}" class="link-item">Inventory</a>
                 </li>
                 <li class="link">
-                    <a href="{% url "colndistrib" %}" class="link-item">Collect & Distribution</a>
+                    <a href="{% url 'colndistrib' %}" class="link-item">Collect & Distribution</a>
                 </li>
                 <li class="link">
-                    <a href="{% url "reservation" %}" class="link-item">Reservation</a>
+                    <a href="{% url 'reservation' %}" class="link-item">Reservation</a>
                 </li>
                 <li class="link">
-                    <a href="{% url "transcription" %}" class="link-item">Transcription Record</a>
+                    <a href="{% url 'transcription' %}" class="link-item">Transcription Record</a>
                 </li>
                 <li class="link">
-                    <a href="{% url "sumrep" %}" class="link-item">Summary Report</a>
+                    <a href="{% url 'sumrep' %}" class="link-item">Summary Report</a>
                 </li>
             </ul>
-            <img src="{% static 'assets/img/user.jpg' %}" class="img_user menuBar" onclick="toggleMenu()">
+            <img src="{% static 'assets/img/aira.jpg' %}" class="img_user menuBar" onclick="toggleMenu()">
         </nav>
     </header>
     <main class="main">
-        <img src=" {% static "assets/img/NCH Logo.png" %}" class="img_nch">
-        <section class="sub_wrap hide" id="toggleMenu" >
+        <img src="{% static 'assets/img/NCH Logo.png' %}" class="img_nch">
+        <section class="sub_wrap hide" id="toggleMenu">
             <div class="sub" id="menu">
                 <button type="submit" class="close" onclick="toggleMenu()" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
                 <!-- <img src="assests/img/close.png" class=""> -->
                 <div class="user_info">
-                    <img src="{% static 'assets/img/user.jpg' %}" class="img_user--">
-                    <h2>Doe, John Micheal V.<hr></h2>
-                    <p>MedTech</p>
-                    <p>123456789</p>
+                    <img src="{% static 'assets/img/aira.jpg' %}" class="img_user--">
+                    <h2>{{lname}}, {{fname}} {{miname}}<hr></h2>
+                    <p>{{jrole}}</p>
+                    <p>{{idnum}}</p>
                     <hr>
-                    <a href="update.html">
+                    <a href="{% url 'update' %}">
                         <button type="button" class="update_btn"><span><img src="{% static 'assets/img/edit_square.png' %}" class="icon"></span>Update Profile</button>
                     </a>
-                    <a href="{% url "signout" %}">
+                    <a href="{% url 'signout' %}">
                         <button type="button" class="logout_btn"><span><img src="{% static 'assets/img/logout.png' %}" class="icon"></span>Log Out</button>
                     </a>
                 </div>
@@ -69,7 +69,7 @@
         </section>
         <section class="greeting">
             <div>
-                <img src="{% static "assets/img/BloodDrop Logo.png" %}" class="img_blood">
+                <img src="{% static 'assets/img/BloodDrop Logo.png' %}" class="img_blood">
             </div>
             <div class="typog1">
                 <p>Hi, John Micheal V. Doe!</p>
